efi_efiruntime: add the interface getnextvariablename
add the interface GetNextVariableName for enumerating the current
variable names.

Signed-off-by: Ivan Hu <ivan.hu@canonical.com>

--- a/README
+++ b/README
@@ -19,6 +19,7 @@ Current capabilities:
   * SetTime
   * GetWakeupTime
   * SetWakeupTime
+  * GetNextVariableName
 
 === BUILDING and INSERT EFI_RUNTIME ===
 
